Fixed some style. And fix exception when a description is too short.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,7 +48,7 @@ html, body {
     display: inline-block;
     vertical-align: bottom;
     max-width: 80%;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: normal;
 }
 
